--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 body, html, #wrapper {
     width: 99%;
     height: 98%;
-    font-size:11px;
+    font-size:12px;
 	font-family: courier
 }
 #wrapper {
@@ -12,4 +12,15 @@ body, html, #wrapper {
     display: table-cell;
     vertical-align: middle;
     text-align:center
+}
+
+.navlist {
+	display: block;
+    text-align:left;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
