Router is good, but css doesn't work again

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@ body, html, #wrapper {
     width: 99%;
     height: 98%;
     font-size:12px;
-	font-family: courier
+	font-family: Pacifico;
 }
 #wrapper {
     display: table
