postcss-nested fix by dropping to version 0.3.2

--- a/react-app/components/LocaleFlags/LocaleFlags.css
+++ b/react-app/components/LocaleFlags/LocaleFlags.css
@@ -1,13 +1,7 @@
 .LocaleFlags {
 
-	border:1px solid var(--section-border);
-	
-	> another {
-		border:5px solid red;
+	img {
+		height: 20px;
+		margin:5px;
 	}
-
-	> p {
-		border:5px solid blue;
-	}
-
 }
