--- a/react-app/components/Navigation/Navigation.css
+++ b/react-app/components/Navigation/Navigation.css
@@ -1,3 +1,17 @@
 .Navigation {
-	
+	ul, li {
+		display:inline;
+		margin: 5px;
+	}
+
+	a {
+		text-decoration: none;
+		color: var(--active);
+
+		&:hover{
+			background: var(--dark-active);
+			color: white
+		}
+
+	}
 }
