--- a/react-app/components/Navigation/Navigation.css
+++ b/react-app/components/Navigation/Navigation.css
@@ -1,7 +1,9 @@
 .Navigation {
+
 	ul, li {
 		display:inline;
-		margin: 5px;
+		margin: 5;
+		padding: 0;
 	}
 
 	a {
@@ -14,4 +16,5 @@
 		}
 
 	}
+	
 }
