--- a/react-app/components/LocaleFlags/LocaleFlags.css
+++ b/react-app/components/LocaleFlags/LocaleFlags.css
@@ -1,8 +1,8 @@
 .LocaleFlags {
-	float:right;
-	margin-top: 10px;
+	float: left;
+	margin-top: 12px;
 	img {
 		height: 20px;
-		margin:5px;
+		margin:3px;
 	}
 }
