--- a/react-app/App.css
+++ b/react-app/App.css
@@ -1,2 +1,12 @@
-.App {
+body {
+  /*css for full size background image*/
+  height: auto;
+  min-height: 100%;
+  
+  background: url(/img/background/blackboard_background.jpg) center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
