--- a/react-app/App.css
+++ b/react-app/App.css
@@ -1,12 +1,9 @@
 body {
-  /*css for full size background image*/
-  height: auto;
-  min-height: 100%;
-  
-  background: url(/img/background/blackboard_background.jpg) center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+	box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+	background: url(/img/background/blackboard_background.jpg) center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
-
